build/log/idf_py_stdout_output_13424
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\ENGG3000\Engg-Systems-Team\build\bootloader\esp-idf\esptool_py && C:\Users\gurya\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/gurya/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/ENGG3000/Engg-Systems-Team/build/bootloader/bootloader.bin"
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/ESPListener.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ESPListener.cpp.obj 
ccache C:\Users\gurya\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/ENGG3000/Engg-Systems-Team/build/config -IC:/ENGG3000/Engg-Systems-Team/main -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/soc/esp32 -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/soc/esp32/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/soc/esp32/register -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/hal/esp32/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_rom/esp32 -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/xtensa/esp32/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/xtensa/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/include/apps -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/port/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/nvs_flash/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_partition/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_netif/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_event/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_wifi/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_wifi/include/local -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_phy/include -IC:/Users/gurya/esp/v5.5.1/esp-idf/components/esp_phy/esp32/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/ENGG3000/Engg-Systems-Team=. -fmacro-prefix-map=C:/Users/gurya/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ESPListener.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\ESPListener.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ESPListener.cpp.obj -c C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp: In function 'void tcp_client_task(void*)':
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:298:5: error: jump to label 'cleanup'
  298 |     cleanup:
      |     ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:267:18: note:   from here
  267 |             goto cleanup;
      |                  ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:273:21: note:   crosses initialization of 'const char* message'
  273 |         const char* message = "Hello from the ESP32 AP Client!\n";
      |                     ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:298:5: error: jump to label 'cleanup'
  298 |     cleanup:
      |     ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:261:18: note:   from here
  261 |             goto cleanup;
      |                  ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:273:21: note:   crosses initialization of 'const char* message'
  273 |         const char* message = "Hello from the ESP32 AP Client!\n";
      |                     ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:298:5: error: jump to label 'cleanup'
  298 |     cleanup:
      |     ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:254:18: note:   from here
  254 |             goto cleanup;
      |                  ^~~~~~~
C:/ENGG3000/Engg-Systems-Team/main/ESPListener.cpp:273:21: note:   crosses initialization of 'const char* message'
  273 |         const char* message = "Hello from the ESP32 AP Client!\n";
      |                     ^~~~~~~
ninja: build stopped: subcommand failed.
